2014-05-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* fread.c: Wide char is not always even bytes in getestr().

2014-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* convert.c: Add (unsigned char*) cast arg1 of UTF8StoUCS().
	* fwrite.c: Declare fprint_euc_char() as static.

2014-05-11  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* main.c: Add TeX Live version.
	* {main,convert,fread,fwrite,styfile}.c, kana.h,
	mendex.doc, mendex.1: Add a new option -I to switch
	internal buffers for key words to EUC-JP or UTF-8.
	* tests/mendex.test: Add a new test.
	* tests/uni.{idx,dict,ist} (new): Test input.
	* tests/uni.ind (new): Expected output.
	* Makefile.am: Adapted.

2014-05-10  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* mendex.1: Fix usage.

2014-05-05  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* convert.c: Allow longer words in dictionary.
	* fwrite.c:  Make a buffer size larger.

2014-05-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fwrite.c: OS X build fix.

2014-04-30  Norbert Preining  <preining@logic.at>

	* fwrite.c: Replace sprintf with snprintf.

2013-11-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* fread.c: Allow lines with only a line ending in mfgets(),
	because dictionary files with DOS line endings can't be read.

2013-09-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fwrite.c: Bug fix as suggested by Akira, Karl, and Norbert.

	* tests/mendex.test (new): Shell script for a test case.
	* tests/foo.idx (new): Test input.
	* tests/foo.ind (new): Expected output.
	* Makefile.am: Adapted.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mendex.h: First include <c-auto.h>.

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-10-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* convert.c: Move common #include's from here ...
	* fread.c: ... and here ...
	* fwrite.c: ... and here ...
	* main.c: ... and here ...
	* pageread.c: ... and here ...
	* sort.c: ... and here ...