@@ -1,5 +1,5 @@
 \indexentry{もりおうがい@森鷗外}{1}
-\indexentry{さとみとん@里見弴}{1}
+\indexentry{さとみとん@里見弴|see{あ}}{1}
 \indexentry{𠮟咤激励}{1}
 \indexentry{Mendex}{1}
 \indexentry{Mendex!のインストール}{1}
